# dioxus-router-experiment

./: Cargo.toml
router/: Cargo.toml
router/src/: lib.rs  route.rs  route_tree.rs
src/: main.rs
src/pages/: (dynamic).rs  index.rs
src/pages/(number1)/: (number2).rs
src/pages/hello_world/: (dynamic).rs  index.rs
